# robust-virtual-tour-builder

./: .cursorrules  .dockerignore  .env  .env.development  .env.example  .env.production  .gitignore  AGENTS.md  AI_Instructions.md  ARCHITECTURE_REVIEW_PROMPT.md  AUDIT_REPORT.md  AUTOPILOT_SIMULATION_ANALYSIS.md  AUTOPILOT_TASKS_SUMMARY.md  BUILD_SCRIPT_FIX.md  BUSINESS_MODEL_ANALYSIS.md  CHANGELOG.md  CLAUDE.md  DATA_FLOW.md  DEVELOPERS_README.md  Dockerfile  Dockerfile.portal  FIX_PROJECT_NAME_BUG.md  GEMINI.md  GEMINI_.md  LICENSE  LICENSE_COMMERCIAL  LICENSE_IMPLEMENTATION.md  MAP.md  PORTAL_ISSUES_ANALYSIS.md  Project_snapshot_20251225_212205.txt  QWEN.md  README.md  RELEASE_v4.0.9.md  REQUIREMENTS.txt  SECURITY_ANALYSIS_REPORT.md  SECURITY_FIXES_COMPLETE.md  SECURITY_FIXES_IMPLEMENTED.md  SPONSORS.md  ai_guidelines.md  app_test_debug.txt  (+47 more)
_dev-system/analyzer/: Cargo.toml
_dev-system/analyzer/src/: analysis.rs  append_part2.pl  append_part2.py  chunk3b.rs  config.rs  consolidator.rs  discovery.rs  feedback.rs  flusher.rs  guard.rs  lib.rs  main.rs  merger.rs  part2.rs  resolver.rs  spec_snapshot.rs  state.rs  task_generator.rs  utils.rs  verification.rs
_dev-system/analyzer/tests/: dependency_test.rs  rescript_parser_test.rs
backend/: .env  .env.example  Cargo.toml  build.rs  startup_log.txt
backend/.cargo/: config.toml
backend/migrations/: 20260128000000_core_schema.sql  20260215000000_add_user_role.sql  20260306000000_auth_identity_core.sql  20260306010000_risk_stepup_schema.sql  20260312000000_portal_customer_access.sql  20260313000001_portal_access_links_and_library.sql  20260313000002_portal_access_link_value.sql  20260313000003_portal_access_link_short_code.sql  20260314000000_portal_recipient_type.sql  20260318000000_portal_assignment_link_controls.sql  20260318000001_portal_assignment_updated_at.sql  20260320152254_trusted_devices_user_scoped.sql
backend/src/: auth.rs  auth_handlers.rs  auth_requests.rs  handlers.rs  lib.rs  main.rs  metrics.rs  middleware.rs  models.rs  models_common.rs  models_identity.rs  models_project_session.rs  pathfinder.rs  startup.rs
backend/src/api/: auth.rs  auth_context.rs  auth_events.rs  auth_flows.rs  auth_flows_account.rs  auth_flows_local_setup.rs  auth_flows_password.rs  auth_flows_session.rs  auth_flows_session_dev.rs  auth_flows_session_signin.rs  auth_mail.rs  auth_risk.rs  auth_step_up.rs  auth_step_up_challenges.rs  auth_step_up_challenges_issue.rs  auth_step_up_challenges_verify.rs  auth_step_up_devices.rs  auth_tests.rs  auth_types.rs  auth_utils.rs  config_routes.rs  config_routes_portal.rs  config_routes_project.rs  geocoding.rs  health.rs  media.rs  mod.rs  portal.rs  portal_admin_routes.rs  portal_public_routes.rs  portal_support.rs  project.rs  project_assets.rs  project_dashboard.rs  project_export.rs  project_import.rs  project_logic.rs  project_multipart.rs  project_multipart_chunks.rs  project_multipart_files.rs  (+7 more)
backend/src/auth/: handlers.rs  jwt.rs  middleware.rs  mod.rs  service.rs
backend/src/middleware/: auth.rs  mod.rs  quota_check.rs  rate_limiter.rs  rate_limiter_config.rs  rate_limiter_response.rs  request_tracker.rs
backend/src/models/: auth.rs  error.rs  errors.rs  geocoding.rs  media.rs  metadata.rs  mod.rs  project.rs  session.rs  similarity.rs  telemetry.rs  user.rs  validation.rs
backend/src/pathfinder/: algorithms.rs  graph.rs  graph_utils.rs  mod.rs  tests.rs  (+4 more)
backend/temp/: 377a33ff-23b6-4e0a-ab61-f34dd16c4470.tmp  897e03fc-3935-4dd0-8f3d-0955df95f689.tmp  aebb08ab-f00e-4d6a-a54f-847cb04cb30f.tmp  c4bdf8e9-4786-4282-a345-5c332530dbe8.tmp
backend/tests/: bench_bufwriter.rs  bench_fs.rs  bench_multipart_io.rs  bench_project_import.rs  bench_teaser.rs  bench_transcode.rs  bench_video_creation.rs  io_benchmark.rs  multipart_test.rs  performance_blocking.rs  shutdown_test.rs  teaser_test.rs  verify_video_io.rs  video_endpoints_test.rs  video_integration.rs
(+4022 files in other folders)
