[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-multipart = "0.7.2"
actix-web = "4.12.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"
futures-util = "0.3.31"
image = "0.25.9"
kamadak-exif = "0.6.1"
mime_guess = "2.0.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1.49.0", features = ["full"] }
uuid = { version = "1.19.0", features = ["v4"] }
zip = "0.6.6"
rayon = "1.11.0"

# PERFORMANCE: Release build optimizations
[profile.release]
lto = true           # Link-Time Optimization for smaller, faster binaries
codegen-units = 1    # Single codegen unit for maximum optimization
opt-level = 3        # Maximum optimization level
strip = true         # Strip debug symbols from binary
