[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-multipart = "0.7.2"
actix-web = "4.12.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-actix-web = "0.7"
futures-util = "0.3.31"
image = { version = "0.25.9", features = ["rayon"] }
kamadak-exif = "0.6.1"
mime_guess = "2.0.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1.49.0", features = ["full"] }
uuid = { version = "1.19.0", features = ["v4"] }
zip = "0.6.6"
rayon = "1.11.0"
dotenvy = "0.15"
img-parts = "0.3"
little_exif = "0.4"
bytes = "1.0"
actix-governor = "0.5"
headless_chrome = "1.0"
base64 = "0.21"
fast_image_resize = { version = "5.1.0", features = ["rayon"] }
webp = "0.3.0"
actix-files = "0.6"
sha2 = "0.10"
flate2 = "1.0"
regex = "1.10"
once_cell = "1.19"
reqwest = { version = "0.11", features = ["json"] }
lazy_static = "1.4"
chrono = "0.4"
fs2 = "0.4"
actix-web-httpauth = "0.8"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
argon2 = "0.5.3"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros", "chrono", "uuid"] }
jsonwebtoken = "9.3"
oauth2 = "4.4"

actix-web-prom = "0.7"
prometheus = "0.13"
tempfile = "3.24.0"
tracing-appender = "0.2.4"
tracing-tree = "0.4.1"
sentry = { version = "0.46.1", features = ["backtrace", "contexts", "panic", "transport", "reqwest"] }
sentry-tracing = "0.46.1"
percent-encoding = "2.3.2"
# PERFORMANCE: Release build optimizations
[profile.release]
lto = true           # Link-Time Optimization for smaller, faster binaries
codegen-units = 1    # Single codegen unit for maximum optimization
opt-level = 3        # Maximum optimization level
strip = true         # Strip debug symbols from binary
