[package]
name = "efficiency-analyzer"
version = "0.1.0"
edition = "2021"
default-run = "efficiency-analyzer"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits", "visit"] }
quote = "1.0"
proc-macro2 = "1.0"
walkdir = "2.3"
anyhow = "1.0"
regex = "1.9"
glob = "0.3"
sha2 = "0.10"

[[bin]]
name = "spec_diff"
path = "src/bin/spec_diff.rs"
